Updating url to CUAT

--- a/dis-client/sample-java-client/src/main/resources/dis-client.properties
+++ b/dis-client/sample-java-client/src/main/resources/dis-client.properties
@@ -1,4 +1,4 @@
-dis.url=https://disweb.cuat.da-desk.com/disweb/1.0/spring-ws
+dis.url=https://cuat.da-desk.com/disweb/1.0/spring-ws
 dis-client.principalId=xxx
 dis-client.private-key.alias=xxx
 dis-client.private-key.password=xxx
