Adding request and response XML to UI

--- a/dis-client/sample-csharp-client/Marcura.Dis.Client.Sample.csproj
+++ b/dis-client/sample-csharp-client/Marcura.Dis.Client.Sample.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisInspectorBehavior.cs" />
+    <Compile Include="DisMessageInspector.cs" />
     <Compile Include="MainDialog.cs">
       <SubType>Form</SubType>
     </Compile>
