--- a/dis-client/sample-java-client/pom.xml
+++ b/dis-client/sample-java-client/pom.xml
@@ -18,7 +18,7 @@
 		<cxf.version>3.1.12</cxf.version>
 		<spring.version>4.1.9.RELEASE</spring.version>
 		<wss4j.version>2.1.10</wss4j.version>
-		<log4j.version>2.8.2</log4j.version>
+		<log4j.version>2.13.3</log4j.version>
 		<disruptor.version>3.3.6</disruptor.version>
 	</properties>
 
@@ -132,6 +132,15 @@
 			<version>${disruptor.version}</version>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 
