update url for cuat disweb

--- a/dis-client/sample-csharp-client/App.config
+++ b/dis-client/sample-csharp-client/App.config
@@ -44,7 +44,7 @@
               bindingConfiguration="DISMutualCertificateDuplexBinding"
               contract="DIS.DaDeskDataExchange"
               name="DaDeskDataExchangeSoap11_DaDeskDataExchange"
-              address="https://cuat.da-desk.com/disweb/1.0/spring-ws"
+              address="https://disweb.cuat.da-desk.com/disweb/1.0/spring-ws"
               behaviorConfiguration="DISEndPointBehaviour">
         <identity>
           <dns value="dis"/>
