--- a/dis-client/sample-java-client/pom.xml
+++ b/dis-client/sample-java-client/pom.xml
@@ -15,8 +15,8 @@
 
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
-		<cxf.version>3.6.5</cxf.version>
-		<spring.version>4.3.15.RELEASE</spring.version>
+		<cxf.version>4.1.0</cxf.version>
+		<spring.version>6.2.3</spring.version>
 		<wss4j.version>2.4.3</wss4j.version>
 		<log4j.version>2.24.3</log4j.version>
 		<disruptor.version>3.4.4</disruptor.version>
@@ -37,7 +37,7 @@
 							can be switched off during development so it does not slow down the process. 
 							This can be done by setting <phase> to none from generate-sources -->
 						<phase>generate-sources</phase>
- 						<!--phase>none</phase--> 
+<!-- 						<phase>none</phase>-->
 						<configuration>
 							<sourceRoot>${project.build.directory}/generated/cxf</sourceRoot>
 							<wsdlOptions>
@@ -93,19 +93,6 @@
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-ws-security</artifactId>
 			<version>${cxf.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.xml.bind</groupId>
-					<artifactId>jaxb-api</artifactId>
-				</exclusion>
-            </exclusions>
-		</dependency>
-
-		<!-- WSS4J for Web Service sercurity -->
-		<dependency>
-			<groupId>org.apache.wss4j</groupId>
-			<artifactId>wss4j-ws-security-common</artifactId>
-			<version>${wss4j.version}</version>
 		</dependency>
 
 		<!-- logging -->
